# CaptionBridge

./: .gitignore  Directory.Build.props  LIVE_CAPTIONS_TRANSLATOR_BLUEPRINT.md  LiveCaption.slnx  QUALITY_ACCEPTANCE.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr_dependencies.rs  asr_worker.rs  captions.rs  llm.rs  main.rs  model_manager.rs  models.rs  native_caption_reader.rs  secrets.rs  segmenter.rs  sessions.rs  settings.rs  windows_integration.rs
src-tauri/worker/: asr_worker.py  build-worker.ps1  gpu-runtime-requirements.lock.txt  requirements.lock.txt  test_asr_worker.py
src/LiveCaption.App/: App.xaml  App.xaml.cs  AppRuntime.cs  CrashReporter.cs  LiveCaption.App.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  SelectionResultWindow.xaml  SelectionResultWindow.xaml.cs  SelectionToolbarWindow.xaml  SelectionToolbarWindow.xaml.cs  SettingsService.cs
src/LiveCaption.Core/: Abstractions.cs  BasicSegmenter.cs  Domain.cs  PromptBuilder.cs  SequentialCaptionTranslator.cs
src/LiveCaption.Llm/: LiveCaption.Llm.csproj  OpenAiCompatibleTranslator.cs
src/LiveCaption.Storage/: DpapiSecretStore.cs  FileSettingsStore.cs  JsonlSessionStore.cs  LiveCaption.Storage.csproj
src/LiveCaption.Windows/: GlobalHotkeyService.cs  LiveCaption.Windows.csproj  MouseSelectionWatcher.cs  NativeMethods.cs  WindowsLiveCaptionSource.cs  (+1 more)
(+8 files in other folders)
